Re-worded and re-arranged all notebooks Fixed devbox start Updated README Updated requirements.txt

--- a/exercise-3.ipynb
+++ b/exercise-3.ipynb
@@ -5,16 +5,30 @@
    "id": "2856edce-b316-4d47-a561-668a4edc2bc0",
    "metadata": {},
    "source": [
-    "### Welcome to the third exercise on E-ID in this E-ID Workshop\n",
+    "# Exercise 3 - Range proofs with ZKPs\n",
     "\n",
-    "Before we start, make sure you have everything installed by following one of the outlined methods in the ReadMe file. \n",
+    "Now that we can do a privacy-preserving unlinkable selective disclosure, we can tackle the next step:\n",
+    "removing even more information by only proving the actually relevant information.\n",
+    "For an age check, the verifier doesn't need to know our birthdate.\n",
+    "It's enough if we can convince them that we are above a certain age.\n",
     "\n",
-    "### Purpose of this exercise\n",
-    "This jupyter notebook explains the following:\n",
-    "1. Zero-Knowledge proofs and specifically range proofs using BBS\n",
-    "2. How to use them using LegoGroth16\n",
-    "3. How to use them using BulletProof++\n",
-    "4. All examples here will use the **docknetwork crypto library**"
+    "## Sections\n",
+    "\n",
+    "1. Issuer - Setting up and signing a credential\n",
+    "2. Creating a range proof using LegoGroth16\n",
+    "3. Creating a range proof using Bulletproofs++\n",
+    "4. Discussion: are we anonymous and unlinkable now?\n",
+    "5. Coding exercise - Add an accumlator using a negative membership check"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54ecc8ab-24e2-4fb6-9499-1a47977a62e2",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## 1. Issuer - Setting up and signing a credential"
    ]
   },
   {
@@ -46,29 +60,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fe47f62-9b21-474a-982a-9dc17efbec52",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import { initializeWasm } from '@docknetwork/crypto-wasm-ts'\n",
-    "await initializeWasm();"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "54ecc8ab-24e2-4fb6-9499-1a47977a62e2",
-   "metadata": {},
-   "source": [
-    "## Issuer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "1c30011b-a462-4096-8666-2845db3362a1",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import { initializeWasm } from '@docknetwork/crypto-wasm-ts'\n",
+    "await initializeWasm();\n",
+    "\n",
     "// Generating a keypair once signature parameters are created.\n",
     "import { BBSKeypair, BBSSignatureParams, BBS_SIGNATURE_PARAMS_LABEL_BYTES } from '@docknetwork/crypto-wasm-ts';\n",
     "\n",
@@ -119,8 +117,11 @@
    "id": "f4db5ab7-20f8-49ae-8f75-b9cfc14404a3",
    "metadata": {},
    "source": [
-    "# LegoGroth16\n",
-    "reference: https://eprint.iacr.org/2019/142"
+    "---\n",
+    "\n",
+    "## 2. Creating a range proof using LegoGroth16\n",
+    "\n",
+    "Our first range proof is done using [LegoGroth16](https://eprint.iacr.org/2019/142)"
    ]
   },
   {
@@ -213,7 +214,7 @@
    "id": "e52b7bb0-8148-4721-9cb9-fd231bf42cdf",
    "metadata": {},
    "source": [
-    "### Now, we redo the experiment with BulletProof++\n",
+    "### Now, we redo the experiment with Bulletproofs++\n",
     "reference: https://eprint.iacr.org/2022/510"
    ]
   },
