--- a/exercise-4a-calc.ipynb
+++ b/exercise-4a-calc.ipynb
@@ -2,28 +2,51 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2856edce-b316-4d47-a561-668a4edc2bc0",
+   "id": "0f7e8976-2003-41c4-a2ae-aa3ccc3451b0",
    "metadata": {},
    "source": [
-    "### Welcome to the third exercise on E-ID in this E-ID Workshop\n",
+    "# Exercise 4a - ZKP Considerations - measurements\n",
     "\n",
-    "Before we start, make sure you have everything installed by following one of the outlined methods in the ReadMe file. \n",
+    "The main difference we saw, so far, is that LegoGroth16 requires the verifier to create a key pair, and send one key to the credential holder, while using the other one later to verify the range proof.\n",
     "\n",
-    "### Purpose of this exercise\n",
-    "This jupyter notebook explains the following:\n",
-    "1. Zero-Knowledge proofs and specifically range proofs using BBS\n",
-    "2. How to use them using BulletProof++\n",
-    "3. How to use them using LegoGroth16\n",
-    "4. All examples here will use the **docknetwork crypto library**"
+    "**Now, we will compare the two algorithms on two aspects:**\n",
+    "1. Time to create the proof\n",
+    "2. Size of messages exchanged\n",
+    "\n",
+    "**Note:**\n",
+    "We will use **BP** for bulletProof++ and **LG** for LegoGroth16\n",
+    "\n",
+    "## Sections\n",
+    "\n",
+    "1. Setup\n",
+    "2. Bulletproofs++\n",
+    "3. LegoGroth16\n",
+    "4. Printing values for plots"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "beb5402d-bf45-488c-a236-7f17431852d1",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## 1. Setup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "26a04d81-9345-4bac-9a53-5cc15d5fd592",
+   "execution_count": 19,
+   "id": "7fe47f62-9b21-474a-982a-9dc17efbec52",
    "metadata": {},
    "outputs": [],
    "source": [
+    "// Common setup - creating a credential, an issuer, and a signature.\n",
+    "\n",
+    "import { initializeWasm } from '@docknetwork/crypto-wasm-ts'\n",
+    "await initializeWasm();\n",
+    "\n",
+    "// Credential used for measurements\n",
     "const E_ID_SCHEMA = {\n",
     "    type: 'object',\n",
     "    properties: {\n",
@@ -40,36 +63,9 @@
     "    profession: \"IT Manager\",\n",
     "    height: 176,\n",
     "    weight: 84\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7fe47f62-9b21-474a-982a-9dc17efbec52",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import { initializeWasm } from '@docknetwork/crypto-wasm-ts'\n",
-    "await initializeWasm();"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "54ecc8ab-24e2-4fb6-9499-1a47977a62e2",
-   "metadata": {},
-   "source": [
-    "## Issuer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c30011b-a462-4096-8666-2845db3362a1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "// Generating a keypair once signature parameters are created.\n",
+    "}\n",
+    "\n",
+    "// Setting up the issuer and creating the signatures\n",
     "import { BBSKeypair, BBSSignatureParams, BBS_SIGNATURE_PARAMS_LABEL_BYTES } from '@docknetwork/crypto-wasm-ts';\n",
     "\n",
     "const stringToBytes = (str: string) => Uint8Array.from(Buffer.from(str, \"utf-8\"));\n",
@@ -78,17 +74,8 @@
     "const keypair = BBSKeypair.generate(params, stringToBytes('seed1'));\n",
     "\n",
     "const secretKey = keypair.secretKey;\n",
-    "const publicKey = keypair.publicKey;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1438940b-20ee-48d1-aa1a-111f1bd5256a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "// Issing a credential based on the E-ID data based on the specified schema\n",
+    "const publicKey = keypair.publicKey;\n",
+    "\n",
     "import { CredentialSchema, BBSCredentialBuilder, BBSCredential, SUBJECT_STR } from '@docknetwork/crypto-wasm-ts'\n",
     "\n",
     "const schema = CredentialSchema.essential(); \n",
@@ -105,188 +92,43 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4db5ab7-20f8-49ae-8f75-b9cfc14404a3",
+   "id": "eff84f1a-842e-4c31-9c83-1751fd2ff2d7",
    "metadata": {},
    "source": [
-    "# LegoGroth16"
+    "---\n",
+    "\n",
+    "## 2. Bulletproofs++"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "493d049b-3267-4826-a621-4bb8027830cb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "// This section establishes a range proof capability based on the LegoGroth16 algorithm\n",
-    "\n",
-    "// The verifier is responsible for creating these keys, then sharing only the proving key with \n",
-    "// the credential holder\n",
-    "import { BoundCheckSnarkSetup, SetupParam } from '@docknetwork/crypto-wasm-ts';\n",
-    "const provingKey = BoundCheckSnarkSetup();\n",
-    "const snarkProvingKey = provingKey.decompress();\n",
-    "const snarkVerifyingKey = provingKey.getVerifyingKeyUncompressed();"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9bb6dace-0878-48c7-a413-adc8e94ed36e",
-   "metadata": {},
-   "source": [
-    "## Credential Holder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b70c8b80-d9c7-4f37-b36f-2306d4386b9e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import { PresentationBuilder } from '@docknetwork/crypto-wasm-ts'\n",
-    "const builder = new PresentationBuilder();\n",
-    "builder.addCredential(credential, publicKey)\n",
-    "builder.markAttributesRevealed(0, new Set<string>(['credentialSubject.name', 'credentialSubject.profession']));\n",
-    "builder.enforceBounds(0, 'credentialSubject.height', 170, 190, 'ageRangeCheck', snarkProvingKey);\n",
-    "\n",
-    "const presentation = builder.finalize();"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "34e1eda7-00b0-4494-806a-0cf0d90297ba",
-   "metadata": {},
-   "source": [
-    "### sending data to Verifier\n",
-    "data: \n",
-    "1. selected data to be revealed\n",
-    "2. Schema of the credential\n",
-    "3. Proof of signature\n",
-    "\n",
-    "All these info and more are stored in the \"presentation object\". Note that this object is a completely serializable JSON object.\n",
-    "\n",
-    "## Verifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9a7ae62e-a246-4aa0-91d3-f95f9d1a58bf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "const receivedObjectOnVerifierSide = presentation.toJSON()\n",
-    "receivedObjectOnVerifierSide  // Assume this was serialized and sent across an API to the verifier.\n",
-    "presentation.spec.credentials[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "577d5945-088f-4fbd-a54a-9e851de8c0d1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import { Presentation } from '@docknetwork/crypto-wasm-ts'\n",
-    "\n",
-    "const predicateParams = new Map([['ageRangeCheck', snarkVerifyingKey]]);\n",
-    "\n",
-    "const recreatedPres = Presentation.fromJSON(receivedObjectOnVerifierSide)\n",
-    "recreatedPres.verify([publicKey], undefined, predicateParams)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0864791b-3582-4ab6-994e-6c45dfcf4dae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "presentation.spec.credentials[0]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e52b7bb0-8148-4721-9cb9-fd231bf42cdf",
-   "metadata": {},
-   "source": [
-    "### Now, we redo the experiment with BulletProof++"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4568097c-cd67-4cd6-a933-2777de137149",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import { BoundCheckBppParams } from '@docknetwork/crypto-wasm-ts'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "43d435dc-c634-47ac-b018-58fd4310998a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import { PresentationBuilder } from '@docknetwork/crypto-wasm-ts'\n",
-    "const builder = new PresentationBuilder();\n",
-    "builder.addCredential(credential, publicKey)\n",
-    "builder.markAttributesRevealed(0, new Set<string>(['credentialSubject.name', 'credentialSubject.profession']));\n",
-    "\n",
-    "// The Holder creates his own parameters for the range proof\n",
-    "const boundCheckBppParams1 = new BoundCheckBppParams(stringToBytes('Common Reference String')).decompress();\n",
-    "builder.enforceBounds(0, 'credentialSubject.height', 170, 190, 'ageRangeCheck', boundCheckBppParams1);\n",
-    "\n",
-    "const presentation = builder.finalize();\n",
-    "const receivedObjectOnVerifierSide = presentation.toJSON()\n",
-    "presentation.spec.credentials[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b07e3e40-da17-4c0d-ac31-66e3c750aaa5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import { Presentation } from '@docknetwork/crypto-wasm-ts'\n",
-    "\n",
-    "// The verifier creates his own parameters for the range proof\n",
-    "const boundCheckBppParams2 = new BoundCheckBppParams(stringToBytes('Common Reference String')).decompress();\n",
-    "\n",
-    "const predicateParams1 = new Map([['ageRangeCheck', boundCheckBppParams2]]);\n",
-    "\n",
-    "const recreatedPres = Presentation.fromJSON(receivedObjectOnVerifierSide)\n",
-    "recreatedPres.verify([publicKey], undefined, predicateParams1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0f7e8976-2003-41c4-a2ae-aa3ccc3451b0",
-   "metadata": {},
-   "source": [
-    "# Comparative study of BulletProof++ and LegoGroth16 \n",
-    "\n",
-    "The main difference we saw, so far, is that LegoGroth16 requires the verifier to create a key pair, and send one key to the credential holder, while using the other one later to verify the range proof.\n",
-    "\n",
-    "**Now, we will compare the two algorithms on two aspects:**\n",
-    "1. Time to create the proof\n",
-    "2. Size of messages exchanged\n",
-    "\n",
-    "**Note:**\n",
-    "We will use **BP** for bulletProof++ and **LG** for LegoGroth16"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "e183e475-3bcb-4fe1-9bdf-f74489ecfd3e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time taken to setup BP++: 0.101 seconds\n",
+      "Proof size without any range bounds is: 491 bytes\n",
+      "Time taken to generate proof with no range bounds ~0.041 seconds\n",
+      "Time taken to validate proof with no range bounds ~0.036 seconds\n",
+      "Proof size with one range bounds is: 1798  bytes\n",
+      "Time taken to generate proof with one range bounds ~0.348 seconds\n",
+      "Time taken to validate proof with no range bounds ~0.134 seconds\n",
+      "Proof size with two range bounds is: 3105  bytes\n",
+      "Time taken to generate proof with two range bounds ~0.667 seconds\n",
+      "Time taken to validate proof with no range bounds ~0.225 seconds\n",
+      "Proof size with three range bounds is: 4412  bytes\n",
+      "Time taken to generate proof with three range bounds ~0.974 seconds\n",
+      "Time taken to validate proof with no range bounds ~0.323 seconds\n"
+     ]
+    }
+   ],
    "source": [
-    "// BulletProof++\n",
+    "// Bulletproofs++\n",
+    "import { BoundCheckBppParams, PresentationBuilder } from '@docknetwork/crypto-wasm-ts'\n",
     "\n",
     "// We measure the time taken to create the verification keys\n",
     "let BPProofTimes: number[] = []\n",
@@ -381,13 +223,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f951019f-c514-4297-a346-af097f106897",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## 3. LegoGroth16"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "5ab68e7b-2e01-46df-a325-0a7648134356",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time taken to setup LG16: 10.047 seconds\n",
+      "Proof size without any range bounds is: 491 bytes\n",
+      "Time taken to generate proof with no range bounds ~0.028 seconds\n",
+      "Time taken to validate proof with no range bounds ~0.032 seconds\n",
+      "Proof size with one range bounds is: 892  bytes\n",
+      "Time taken to generate proof with one range bounds ~6.031 seconds\n",
+      "Time taken to validate proof with no range bounds ~0.048 seconds\n",
+      "Proof size with two range bounds is: 1293  bytes\n",
+      "Time taken to generate proof with two range bounds ~11.641 seconds\n",
+      "Time taken to validate proof with no range bounds ~0.063 seconds\n",
+      "Proof size with three range bounds is: 1694  bytes\n",
+      "Time taken to generate proof with three range bounds ~17.776 seconds\n",
+      "Time taken to validate proof with no range bounds ~0.077 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "// LegoGroth16\n",
+    "import { BoundCheckSnarkSetup, SetupParam } from '@docknetwork/crypto-wasm-ts';\n",
+    "\n",
     "// We measure the time taken to create the verification keys\n",
     "let LGProofTimes: number[] = []\n",
     "let LGProofSizes: number[] = []\n",
@@ -476,13 +350,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9bb48469-f48a-4c27-aee6-c963273f9f39",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## 4. Printing values for plots"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "5604e8cc-431a-4244-bfa3-b482dd216fce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ \u001b[33m0.101\u001b[39m, \u001b[33m0.041\u001b[39m, \u001b[33m0.348\u001b[39m, \u001b[33m0.667\u001b[39m, \u001b[33m0.974\u001b[39m ] [ \u001b[33m10.047\u001b[39m, \u001b[33m0.028\u001b[39m, \u001b[33m6.031\u001b[39m, \u001b[33m11.641\u001b[39m, \u001b[33m17.776\u001b[39m ] [ \u001b[33m491\u001b[39m, \u001b[33m1798\u001b[39m, \u001b[33m3105\u001b[39m, \u001b[33m4412\u001b[39m ] [ \u001b[33m491\u001b[39m, \u001b[33m892\u001b[39m, \u001b[33m1293\u001b[39m, \u001b[33m1694\u001b[39m ] [ \u001b[33m0.036\u001b[39m, \u001b[33m0.134\u001b[39m, \u001b[33m0.225\u001b[39m, \u001b[33m0.323\u001b[39m ] [ \u001b[33m0.032\u001b[39m, \u001b[33m0.048\u001b[39m, \u001b[33m0.063\u001b[39m, \u001b[33m0.077\u001b[39m ]\n",
+      "\u001b[33m930100\u001b[39m\n"
+     ]
+    }
+   ],
    "source": [
-    "console.log(BPProofTimes, LGProofTimes, BPProofSizes, LGProofSizes, BPVerificationTimes, LGVerificationTimes);"
+    "console.log(BPProofTimes, LGProofTimes, BPProofSizes, LGProofSizes, BPVerificationTimes, LGVerificationTimes);\n",
+    "console.log(provingKey.value.length);"
    ]
   }
  ],
